@@ -1,3 +1,5 @@
+- fix range max value >2TB when creating a partition (useful for LVs >2TB)
+
 Version 10.4.158 - 3 August 2007, by Pascal "Pixel" Rigaux
 
 - configure removable writable media to use "flush" option instead of "sync" (#23042)
