@@ -1,4 +1,6 @@
-- diskdrake: add support for "nodiratime" mount option
+- diskdrake: 
+  o add support for "nodiratime" mount option
+  o fix range max value >2TB when creating a partition (useful for LVs >2TB)
 - drakxservices: describe a few more services (#18612)
 
 Version 10.4.159 - 06 August 2007, by Thierry Vignaud
